--- a/gb/20/11/1/n12518371.md
+++ b/gb/20/11/1/n12518371.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ypsgci320/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ypsgci320/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ypsgci320/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ypsgci320/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ypsgci320/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ypsgci320/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ypsgci320/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ypsgci320/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ypsgci320/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ypsgci320/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ypsgci320/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ypsgci320/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ypsgci320/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>千百度：他们为什么要退出中共各级组织？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/20200926-PINSHAN-QuitCCP-01-600x390.jpg" />
 <h6>2020年9月26日，加拿大埃德蒙顿退党服务中心的志愿者和市民举行汽车游行，声援在三退大潮中退出中共的3.6亿勇士。（平山／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年11月02日讯】自大纪元网站2004年12月3日发起“<ahref="https://github.com/ypsgci320/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>”(退党/团/队) 活动截止2020年11月1日傍晚，总计达到366,675,252人“三退”，昨日人数 65,888。</p>
-<p>为什么会有这么多人“<ahref="https://github.com/ypsgci320/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>”？具体原因可以说不尽相同，但有些原因则是共同。</p>
+	<p>【大纪元2020年11月02日讯】自大纪元网站2004年12月3日发起“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>”(退党/团/队) 活动截止2020年11月1日傍晚，总计达到366,675,252人“三退”，昨日人数 65,888。</p>
+<p>为什么会有这么多人“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>”？具体原因可以说不尽相同，但有些原因则是共同。</p>
 <p>哪些原因是共同的呢？在回答这个问题之前，先让我们来看看最近发表的4篇“三退”声明，看看当事人是怎么说的。</p>
 <p>l? 我与邪灵恶党划清界限的三退声明</p>
-<p>我是一名来自中国上海的西班牙归国留学生祁林，在今年因为中共病毒(又称新冠状病毒，COVID-19)被迫中断学业，回国落地隔离在隔离酒店的那些天我们遭受了中共邪党工作人员的粗暴对待，感受到这个残暴政权的无耻无情和治下人民的痛苦。在<ahref="https://github.com/ypsgci320/djy/blob/master/gb/tag/%E7%BF%BB%E5%A2%99.md#1">翻墙</a>与西班牙的同学联络时，无意间看到了大纪元网站写的<ahref="https://github.com/ypsgci320/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md#1">九评</a>共产党和迫害法轮功的真相，一下子惊醒。震撼了在中共国生活多年习以为常已经麻木的我。</p>
+<p>我是一名来自中国上海的西班牙归国留学生祁林，在今年因为中共病毒(又称新冠状病毒，COVID-19)被迫中断学业，回国落地隔离在隔离酒店的那些天我们遭受了中共邪党工作人员的粗暴对待，感受到这个残暴政权的无耻无情和治下人民的痛苦。在<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BF%BB%E5%A2%99.md#1">翻墙</a>与西班牙的同学联络时，无意间看到了大纪元网站写的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md#1">九评</a>共产党和迫害法轮功的真相，一下子惊醒。震撼了在中共国生活多年习以为常已经麻木的我。</p>
 <p>我为我曾是少先队员和高中大学时期是团员、党员而感到羞愧。回想起来过去种种一旦加入过它们，受到它们党文化的影响和洗脑就像是恶魔的印记一样深刻植入大脑影响终生，幸运的是此刻我已经醒悟，尽管这残酷真相让我十分痛苦撕碎了我以往对共产党的种种认知和幻想。</p>
 <p>我下定了决心要去反对这个魔鬼组织，首先从声明退党退团退队开始，与过去的自己做一个切割。希望我能够摆脱这魔鬼的诅咒和邪恶的印记让我的人生拥抱真诚善良和正义，也感谢法轮功这么多年的付出坚持反共传播真相唤醒我们中国人同时提供了这个平台让我们能够和邪灵恶魔政党划清界限！</p>
 <p>最后我想说：共产党你这个恶魔！你把多少中国人的生活都他妈毁了！你这是什么党？你害人不浅呐！</p>
@@ -28,50 +28,49 @@
 <p>小时候因为生活环境较为封闭，获取外界信息的方式有限，而学校里身边的人都加入少先队，那时被灌输的想法是加入少先队表示自己品学兼优，是优秀学生的象征，后来加入共青团和共产党时也一直是这样认为的。直到后来偶然的机会浏览到了海外的信息，才突然感受到外面世界的自由与美好，再后来亲自到海外生活了一段时间，深切体会到自由民主社会对个人的尊重与关怀，才是真正的普世价值。</p>
 <p>多年的经历到如今已经明白中国共产党的理念早已不再是口中所谓的“以人为本”，一切都是为自己政党的存续为核心利益，根本不关心个人的基本权利，必要时甚至会拿无辜的个体作炮灰，替罪羊和挡箭牌。这样的政党已无被继续拥戴的可能！因而在此声明，退出中国少年先锋队，中国共产主义青年团，以及中国共产党，从此不想再与上述政党和组织，或与其相关的组织或个人有任何关系。</p>
 <p>声明人:陈云龙 2020-10-05</p>
-<p>从上述4篇声明来看，如果说当事人当年加入中共组织是因为受骗、无知或者被迫，那么他们今天之所以选择与中共一刀两断，无非主要是因为两个原因，一个是亲身感受到了中共“这个残暴政权的无耻无情和治下人民的痛苦”，另一个就是通过“<ahref="https://github.com/ypsgci320/djy/blob/master/gb/tag/%E7%BF%BB%E5%A2%99.md#1">翻墙</a>”了解到了被中共封锁的“很多过往的真实历史”，了解到了民主国家的“自由与美好”，从而彻底撕碎了“以往对共产党的种种认知和幻想”。而无论是他们的亲身感受还是“翻墙”获取的信息，可以说都关乎真相，区别仅在于前者是直接获的的真相，后者是间接获的的真相。</p>
-<p>事实有力地证明：真相是戳穿<ahref="https://github.com/ypsgci320/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%B0%8E%E8%A8%80.md#1">中共谎言</a>的利刃，真相是与中共一刀两断的强大推手，真相也是解体中共的神奇武器！</p>
+<p>从上述4篇声明来看，如果说当事人当年加入中共组织是因为受骗、无知或者被迫，那么他们今天之所以选择与中共一刀两断，无非主要是因为两个原因，一个是亲身感受到了中共“这个残暴政权的无耻无情和治下人民的痛苦”，另一个就是通过“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BF%BB%E5%A2%99.md#1">翻墙</a>”了解到了被中共封锁的“很多过往的真实历史”，了解到了民主国家的“自由与美好”，从而彻底撕碎了“以往对共产党的种种认知和幻想”。而无论是他们的亲身感受还是“翻墙”获取的信息，可以说都关乎真相，区别仅在于前者是直接获的的真相，后者是间接获的的真相。</p>
+<p>事实有力地证明：真相是戳穿<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%B0%8E%E8%A8%80.md#1">中共谎言</a>的利刃，真相是与中共一刀两断的强大推手，真相也是解体中共的神奇武器！</p>
 <p>责任编辑：高义</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/4/12/4/n737542.md#1">【九评之九】评中国共产党的流氓本性</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/19/6/8/n11309523.md#1">BBC记者微信被封 解封过程令人毛骨悚然</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/25/n12500497.md#1">宋善：聆听中国人自救的心声?</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/11/1/n12517141.md#1">石铭：广东省遭恶报的实例当惊醒所有作恶者</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/4/12/4/n737542.md#1">【九评之九】评中国共产党的流氓本性</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/6/8/n11309523.md#1">BBC记者微信被封 解封过程令人毛骨悚然</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/25/n12500497.md#1">宋善：聆听中国人自救的心声?</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/11/1/n12517141.md#1">石铭：广东省遭恶报的实例当惊醒所有作恶者</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10003609.md#1" target="_blank">大逃港：哪里有自由，哪里就是我的祖国！</a></li><li><a href="https://github.com/ypsgci320/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488663.md#1" target="_blank">寻获生命真谛 法国医院院长分享修炼感悟</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/5/n10538029.md#1" target="_blank">王友琴：文革中的王冷之死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/5/n9927251.md#1" target="_blank">澄清长江日报诽谤文章 武汉退休干部的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/9/30/n12442859.md#1">《圣经》与《推背图》预言的应验与变换5</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/26/n12503625.md#1">麦克阿瑟的战后岁月及临终前的预言</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/22/n12494562.md#1">张爱玲的家世 晚清历史里的先人</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/11/n12468150.md#1">再生少年胜五郎 说出冥界转生过程钜细靡遗</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/30/n12512315.md#1">像罗宇这样的红二代</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/30/n12514896.md#1">车评：双色多变化 2020 Nissan Kicks SR</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/31/n12515233.md#1">【重播】最后冲刺 川普及夫人访宾州五地演讲</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/31/n12516624.md#1">【薇羽看世间】预言里的2020年</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/30/n12513677.md#1">FBI调查亨特被证实后 拜登需回答七问题</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/30/n12514399.md#1">五中公报涉台仅15字 港媒：字越少 事越大</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/16/n12481113.md#1">川普拜登问鼎白宫 6大摇摆州战况详解</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/30/n12514872.md#1">与罗晋庆祝结婚两周年 唐嫣素颜出镜甜蜜微笑</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/29/n12511870.md#1">翻拍《棋灵王》被批毁童年 中共大内宣引众怒</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/29/n12512090.md#1">明星追星 江疏影贺偶像玄彬获奖“实至名归”</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/29/n12509634.md#1">《后翼弃兵》影评：天才女棋手的精彩传奇</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/31/n12516017.md#1">“007”詹姆斯·邦德饰演者肖恩·康纳利去世</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/30/n12514896.md#1">车评：双色多变化 2020 Nissan Kicks SR</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/30/n12513083.md#1">英男童5点起床习惯被取笑 却救全家人性命</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/30/n12512744.md#1">曾多次准确预测大选 犹太拉比：川普会连任</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/30/n12513272.md#1">濒死男子敲天堂大门 被告知时辰未到</a></li>
-<li><a href="https://github.com/mhyfql3155/djy/blob/master/gb/20/10/29/n12511487.md#1">皮肤干燥发痒？一碗银耳汤解秋燥 润肤抗老</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ypsgci320/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ypsgci320/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/1/n12518371.htm">千百度：他们为什么要退出中共各级组织？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/1/n12518371.htm">千百度：他们为什么要退出中共各级组织？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ypsgci320/djy/blob/master/gb/20/11/1/n12518371.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ypsgci320/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ypsgci320/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ypsgci320/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/11/1/n12518371.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
